--- a/assembl/static2/package.json
+++ b/assembl/static2/package.json
@@ -53,6 +53,7 @@
     "react-redux-i18n": "^0.1.1",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "searchkit": "^1.0.0-0"
   }
 }
